# quest_gnc

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml  quest_ext_vars.mk
include/quest_gnc/ctrl/: lee_control.h  se3_control.h
include/quest_gnc/diffeo/: body_frame.h  rates.h
include/quest_gnc/est/: att_filter.h  imu_integ.h
include/quest_gnc/mixer/: basic_mixer.h  basic_mixer_cfg.h  wrench_mixer.h  wrench_mixer_cfg.h
include/quest_gnc/sysid/: signal_gen.h
include/quest_gnc/utils/: common.h  filter.h  multirotor_model.h  rigidbody_model.h  ringbuffer.h  se3_model.h  so3.h  world_params.h
python/quest_gnc/: __init__.py
quest_gnc/: CMakeLists.txt  package.xml
quest_gnc/src/diffeo/: body_frame.cpp
quest_gnc/src/quest_gnc/diffeo/: Makefile
quest_gnc/src/traj/: Makefile  mod.mk
src/comp/: .gitignore
src/comp/LeeCtrl/: Events.xml  LeeCtrlComponentAi.xml  LeeCtrlComponentImpl.cpp  LeeCtrlComponentImpl.hpp  Makefile  Telemetry.xml  mod.mk
src/comp/LeeCtrl/docs/: LeeCtrl.md
src/ctrl/: Makefile  lee_control.cpp  mod.mk  se3_control.cpp
src/diffeo/: Makefile  body_frame.cpp  mod.mk  rates.cpp
src/est/: Makefile  att_filter.cpp  imu_integ.cpp  mod.mk
src/mixer/: Makefile  basic_mixer.cpp  mod.mk  wrench_mixer.cpp
src/pybind11/: att_filter_bind.cc  bind.cc  body_frame_bind.cc  common_bind.cc  imu_integ_bind.cc  lee_control_bind.cc  rates_bind.cc  signal_gen_bind.cc
src/sysid/: Makefile  mod.mk  signal_gen.cpp
src/traj/: Makefile  mod.mk
test/ctrl/: lee_control_phasing_test.cpp
