<?xml version="1.0"?>
<package format="2">
  <name>quest_gnc</name>
  <version>0.0.0</version>
  <description>GNC libraries for QUEST</description>

  <author email="genemerewether@gmail.com">Gene Merewether</author>

  <maintainer email="genemerewether@gmail.com">Gene Merewether</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr</depend>
  <!-- This is an OPTIONAL dep! Will use system library if not present. -->
  <depend>protobuf_catkin</depend>

</package>
